ta bort collection och lägg till tolist